--- a/B-1.html
+++ b/B-1.html
@@ -2,25 +2,82 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <meta name="viewport" content="width=device-width initial-width=1.0">
         <link rel="stylesheet" href="styles_b-1.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- <script>
+            $(document).ready(function(){
+
+            });
+
+            $(function(){
+                $(".nav > ul > li").mouseover(function(){
+                    $(this).find(".submenu").stop().slideDown()
+                });
+                $(".nav > ul > li").mouseout(function(){
+                    $(this).find(".submenu").stop().slideUp();
+                })
+            });
+        </script> -->
     </head>
     <body>
-        <header>
+        <header id="header">
             <div class="side-boarder"></div>
             <div class="logo"></div>
-            <div class="dropdown"></div>
+            <nav class="nav">
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="#">Dropdown 1</a>
+                            <ul class="submenu">
+                                <li><a href="#">Link 1</a></li>
+                                <li><a href="#">Link 2</a></li>
+                                <li><a href="#">Link 3</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Dropdown 2</a>
+                            <ul class="submenu">
+                                <li><a href="#">Link 1</a></li>
+                                <li><a href="#">Link 2</a></li>
+                                <li><a href="#">Link 3</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Dropdown 3</a>
+                            <ul class="submenu">
+                                <li><a href="#">Link 1</a></li>
+                                <li><a href="#">Link 2</a></li>
+                                <li><a href="#">Link 3</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </nav>
             <div class="side-boarder"></div>
         </header>
-        <div class="slider">
-            
-        </div>
-        <div class="c">
+        <article id="slider">
+            <div class="sliderWrap">
+                <div class="slider s1">
+                    <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider01.jpg" alt="Image 1">
+                    <span>Image 1</span>
+                </div>
+                <div class="slider s2">
+                    <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider02.jpg" alt="Image 2">
+                    <span>Image 2</span>
+                </div>
+                <div class="slider s3">
+                    <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider03.jpg" alt="Image 3">
+                    <span>Image 3</span>
+                </div>
+            </div>
+        </article>
+        <content class="c">
             <div class="c1"></div>
             <div class="c2"></div>
             <div class="c3"></div>
-        </div>
-        <footer>
+        </content>
+        <footer id="footer">
             <div class="side-boarder"></div>
             <div class="footer1"></div>
             <div class="footer2">
@@ -30,4 +87,5 @@
             <div class="side-boarder"></div>
         </footer>
     </body>
+    <script src="b-1.js"></script>
 </html>
